# testt

./: .gitignore  README.md
.github/workflows/: python-tests.yml
config/jflex/: README.md
jadx-cli/: build.gradle.kts
jadx-cli/src/main/java/jadx/cli/: JadxCLICommands.java
jadx-cli/src/main/java/jadx/cli/commands/: CommandApkDiff.java  CommandApkPatch.java  CommandAssistant.java
jadx-cli/src/test/java/jadx/cli/: AddCommandTest.java
jadx-gui/src/main/resources/i18n/: Messages_de_DE.properties  Messages_en_US.properties  Messages_es_ES.properties  Messages_id_ID.properties  Messages_ko_KR.properties  Messages_pt_BR.properties  Messages_ru_RU.properties  Messages_zh_CN.properties  Messages_zh_TW.properties
seo-audit-tool/: .gitignore  README.md  pyproject.toml  requirements.txt
seo-audit-tool/examples/: config.example.json  sample_results.json
seo-audit-tool/seoaudit/: __init__.py  __main__.py  analyzer.py  cli.py  cluster.py  collector.py  config.py  domain.py  dorks.py  http_client.py  insights.py  logging_setup.py  models.py  pipeline.py  ratelimit.py  state.py
seo-audit-tool/seoaudit/report/: __init__.py  html_report.py  json_report.py
seo-audit-tool/seoaudit/report/templates/: report.html.j2
seo-audit-tool/seoaudit/search/: __init__.py  base.py  google_cse.py  manual.py  serpapi.py
seo-audit-tool/seoaudit/web/: __init__.py  app.py
seo-audit-tool/seoaudit/web/templates/: index.html  job.html
seo-audit-tool/tests/: test_analyzer.py  test_cluster.py  test_collector.py  test_domain.py  test_dorks.py  test_insights.py  test_pipeline.py
(+11 files in other folders)
