[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seoaudit"
version = "0.1.0"
description = "White-hat, single-domain SEO audit & search-visibility monitoring tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "seoaudit contributors" }]
keywords = ["seo", "audit", "search", "indexing", "dorks", "site-audit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Intended Audience :: Developers",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "jinja2>=3.1",
]

[project.optional-dependencies]
web = ["flask>=2.2"]
pdf = ["weasyprint>=59"]
dev = ["pytest>=7.0"]

[project.scripts]
seoaudit = "seoaudit.cli:main"

[project.urls]
Homepage = "https://github.com/loloshka1337/testt"

[tool.setuptools.packages.find]
include = ["seoaudit*"]

[tool.setuptools.package-data]
seoaudit = ["report/templates/*.j2", "web/templates/*.html"]
